# qt-algolia-api-client

./: .gitignore  CMakeLists.txt  Makefile  README.md  mainwindow.h
algoliasearch/client/include/AlgoliaSearch/: Macros.hpp  NetworkResult.hpp
algoliasearch/client/include/AlgoliaSearch/private/: ClientPrivate.hpp  Hosts.hpp  IndexPrivate.hpp  NetworkRequest.hpp
algoliasearch/client/src/: NetworkRequest.cpp  NetworkResult.cpp  Query.cpp
algoliasearch/demo/: CMakeLists.txt
client/: CMakeLists.txt  Export.hpp
client/include/AlgoliaSearch/: Client.hpp  Index.hpp  Query.hpp
client/include/AlgoliaSearch/private/: NetworkResultPrivate.hpp  QueryPrivate.hpp  SearchRequest.hpp
client/src/: Client.cpp  Hosts.cpp  Index.cpp  SearchRequest.cpp
demo/src/: main.cpp
helloWorld/: CMakeLists.txt  HelloWorld  Makefile  main.cpp
lib/: algoliaindex.h  algoliasuggest.cpp
old/: main.cpp  mainwindow.cpp
old/lib/: algoliaindex.cpp  algoliasearch.cpp  algoliasearch.h  algoliasuggest.cpp  algoliasuggest.h
