# Copyright (c) 2019 All Rights Reserved Algolia SAS

cmake_minimum_required( VERSION 3.1.0 )

### Project ####################################################################

project( AlgoliaSearch )

### Directories ################################################################

add_subdirectory( client )
add_subdirectory( demo )
